Try fix layout on mobile

--- a/Resources/console_style.css
+++ b/Resources/console_style.css
@@ -91,7 +91,7 @@ div.status {
 
 #game {
     border: 0; margin: 0; padding: 0;
-    position: absolute; top: 30px; left: 0; right: 0; bottom: 0;
+    position: absolute; top: 30px; left: 0;
     display: flex; align-items: center; justify-content: center;
 }
 @media screen and (min-height: 300px) {
